# service-users

./: .dockerignore  .gitignore  Dockerfile  README.md  demo_script.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
.github/workflows/: deploy.yml  lint-test-deploy.yml  lint-test.yml  lint.yml  test.yml  worflow-test-pr.yml  workflow-test-push.yml
alembic/: constants.py  env.py
alembic/versions/: 01921d9e4ca9_add_riders_table.py  0e5de04679eb_add_cars_table.py  2007e4002358_first_table.py  45cfe027d136_create_users_table.py  4bfb3c64feed_add_rules_table.py  66bd2be8bc3d_create_riders_table.py  712c8ec5e9cc_desc.py  89484292d1a1_create_taken_trips_table.py  8e3cbd9fc057_add_users_table.py  90de9640f582_add_preferred_location_in_string_format.py  a37daf176079_create_admins_table.py  b96d745478cb_create_drivers_table.py  constants.py  d1f3ce9f1a32_add_active_column_to_pricing_rules.py  dde80b65fda9_create_requested_trips_table.py  de380b6f6f36_change_price_data_type.py  df80ed2c973f_create_cars_table.py  e7deca42d8e8_remove_wallet_column.py  ebf71f1ca060_add_drivers_table.py
src/: main.py
src/adapters/: orm.py
src/api/: deps.py
src/conf/: config.py
src/core/: config.py
src/crud/: base.py  crud_user.py
src/database/: admin_dto.py  car_dto.py  driver_dto.py  rider_dto.py  time_trackable_dto.py  user_dto.py
src/db/: base.py  init_db.py  session.py
src/domain/: admin.py  car.py  commands.py  driver.py  driver_qualification.py  events.py  location.py  passenger_qualification.py  password.py  password_encoder.py  push_token.py  (+3 more)
(+80 files in other folders)
